package decorator;

public class LongBlack extends Coffee{
    public LongBlack() {
        setDes("Long Black");
        setPrice(5.0f);
    }
}
