package decorator;

public class ShortBlack extends Coffee{
    public ShortBlack() {
        setDes("Short Black");
        setPrice(4.0f);
    }
}
